--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 #===========================================================
-ADD_LIBRARY(fensterkalklib SHARED node.cpp)
+ADD_LIBRARY(fensterkalklib SHARED node.cpp frame.cpp)
 TARGET_LINK_LIBRARIES(fensterkalklib ${Boost_LIBRARIES} )
 INSTALL(TARGETS fensterkalklib DESTINATION ${CMAKE_INSTALL_LIBDIR})
 #===========================================================
