Use CGAL to check the frame (polygon).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(fensterkalk CXX)
 cmake_minimum_required(VERSION 2.8)
 
+SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cMake")
 INCLUDE(GNUInstallDirs)
 
 #C+11 support
@@ -15,6 +16,11 @@ ADD_DEFINITIONS( "-DBOOST_LOG_DYN_LINK" )
 FIND_PACKAGE(Eigen3 REQUIRED)
 INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
 
+FIND_PACKAGE(CGAL REQUIRED)
+ADD_DEFINITIONS( "${CGAL_DEFINITIONS}")
+
+FIND_PACKAGE(GMP REQUIRED)
+
 #===========================================================
 SET(CMAKE_SKIP_BUILD_RPATH FALSE)
 SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
@@ -28,11 +34,6 @@ ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/lib")
 #===========================================================
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/bin")
-#===========================================================
-
-#===========================================================
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gui)
-ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/gui")
 #===========================================================
 
 
