--- a/gui/1/CMakeLists.txt
+++ b/gui/1/CMakeLists.txt
@@ -3,7 +3,9 @@ SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 
-ADD_EXECUTABLE(fensterkalkgui main.cpp node.cpp edge.cpp graphwidget.cpp)
+#QT5_WRAP_UI(UIS_HDRS mainwindow.ui)
+
+ADD_EXECUTABLE(fensterkalkgui main.cpp mainwindow.cpp ${UIS_HDRS})
 QT5_USE_MODULES(fensterkalkgui Widgets)
 
 TARGET_LINK_LIBRARIES(fensterkalkgui ${Boost_LIBRARIES} fensterkalklib)
