Add one more gui variant.

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -3,7 +3,7 @@ SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 
-ADD_EXECUTABLE(fensterkalkgui main.cpp node.cpp edge.cpp graphwidget.cpp)
+ADD_EXECUTABLE(fensterkalkgui main.cpp constrGui.cpp mainWindow.cpp)
 QT5_USE_MODULES(fensterkalkgui Widgets)
 
 TARGET_LINK_LIBRARIES(fensterkalkgui ${Boost_LIBRARIES} fensterkalklib)
