Fix gui for updated lib API.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,13 +32,13 @@ ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/lib")
 #===========================================================
 
 #===========================================================
-#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)
-#ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/bin")
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)
+ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/bin")
 #===========================================================
 
 #===========================================================
-#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gui)
-#ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/gui")
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gui)
+ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/gui")
 #===========================================================
 
 
