--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.0)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cMake")
 INCLUDE(GNUInstallDirs)
 
-#C+11 support
+#C++14 support
 set(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS}")
 #===========================================================
 FIND_PACKAGE(Boost COMPONENTS program_options filesystem system regex iostreams log log_setup thread REQUIRED)
@@ -26,10 +26,8 @@ SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 #===========================================================
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/public)
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/lib")
-#===========================================================
-
 #===========================================================
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/bin")
@@ -39,5 +37,3 @@ ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/bin")
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/gui)
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/gui")
 #===========================================================
-
-
