--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 #===========================================================
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/public)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/lib")
 #===========================================================
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)
