--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,3 +1,3 @@
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/lib/public/ @CMAKE_CURRENT_SOURCE_DIR@/docs
+INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/lib @CMAKE_CURRENT_SOURCE_DIR@/docs
 
