--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -17,14 +17,25 @@ SET(LIB_HDR node.h
 
 ADD_LIBRARY(fensterkalklib SHARED ${LIB_SRC})
 TARGET_LINK_LIBRARIES(fensterkalklib
-  ${Boost_LIBRARIES}
-  ${CGAL_LIBRARIES}
-  ${GMP_LIBRARIES}
+  PUBLIC
+    ${Boost_LIBRARIES}
+    ${CGAL_LIBRARIES}
+  PRIVATE
+    ${GMP_LIBRARIES}
 )
-
+TARGET_INCLUDE_DIRECTORIES(fensterkalklib
+    PUBLIC
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/fensterkalk>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}
+)
 #===========================================================
 
-INSTALL(TARGETS fensterkalklib DESTINATION ${CMAKE_INSTALL_LIBDIR})
+INSTALL(TARGETS fensterkalklib
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
 INSTALL (FILES ${LIB_HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fensterkalk)
 
 #===========================================================
